Time: 2 ms (95.13%), Space: 45.5 MB (82.7%) - LeetHub