@@ -1,27 +1,29 @@
 class Solution {
+    private List<List<Integer>> result = new ArrayList<>();
+    private List<Integer> track = new ArrayList<>();
+    private int sum = 0;
+    
     public List<List<Integer>> combinationSum(int[] candidates, int target) {
-        List<List<Integer>> result = new ArrayList<>();
-        backtrack(candidates, target, 0, new ArrayList<>(), result);
+        backtrack(candidates, target, 0);
         return result;
     }
 
-    private void backtrack(int[] candidates, int target, int start, List<Integer> combs, List<List<Integer>> result) {
-
-        if (target == 0) {
-            result.add(new ArrayList<>(combs));
+    private void backtrack(int[] candidates, int target, int start) {
+        if (sum == target) {
+            result.add(new ArrayList<>(track));
             return;
         }
 
-        if (target < 0) {
-            return;
-        }
+        if (sum > target) return;
 
         for (int i = start; i < candidates.length; i++) {
-            int candidate = candidates[i];
+            sum += candidates[i];
+            track.addLast(candidates[i]);
 
-            combs.add(candidate);
-            backtrack(candidates, target - candidate, i, combs, result);
-            combs.remove(combs.size() - 1);
+            backtrack(candidates, target, i);
+
+            sum -= candidates[i];
+            track.removeLast();
         }
     }
 }
